added initial interaction

--- a/shapes/src/index.html
+++ b/shapes/src/index.html
@@ -1,22 +1,29 @@
-<style>
-    #stage{
-        position: relative;
-        width: 500px;
-        height: 500px;
-    }
-    #stage svg{
-        position: absolute;
-        pointer-events: none;
-    }
-    #stage svg rect{
-        pointer-events: initial;
-    }
-</style>
-<h1>shapes puzzler</h1>
-<div id="stage"></div>  
-<script type="module">
-    import { Stage } from './components/Stage.js';
-    const stage = new Stage(document.getElementById('stage'));
-    stage.addShape('square', 'sq');
-    stage.addShape('bigL', 'bl');
-</script>
+<html>
+    <head>
+        <style>
+            #stage {
+                position: relative;
+                width: 500px;
+                height: 500px;
+            }
+            #stage svg {
+                position: absolute;
+                pointer-events: none;
+            }
+            #stage svg rect {
+                pointer-events: initial;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>shapes puzzler</h1>
+        <div id="stage"></div>
+        <script type="module">
+            import { Stage } from "./components/Stage.js";
+            const stage = new Stage(document.getElementById("stage"));
+            stage.addShape("square", "sq");
+            stage.addShape("bigL", "bl");
+            stage.addShape("cross", "x");
+        </script>
+    </body>
+</html>
